--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
   background-color: #fffafa;
   color: #54423d;
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 h1,
@@ -46,6 +47,17 @@ img {
   display: block;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: #cc4b2c;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #662616;
+}
+
 @media screen and (min-width: 1024px) {
   body {
     margin: 0;
@@ -67,11 +79,12 @@ img {
   position: fixed;
   top: 0;
   left: -100%;
-  width: 90%;
+  width: 100%;
   height: 100vh;
   padding: 3rem;
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: #cc4b2c;
   transition: 0.5s;
 }
