--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,10 +6,12 @@
 ::before,
 ::after {
    box-sizing: border-box;
+   overflow-x: hidden;
 }
 
 html {
    scroll-behavior: smooth;
+   overflow-x: hidden;
 }
 
 body {
