--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 ::before,
 ::after {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 html {
@@ -18,6 +17,9 @@ body {
   background-color: #fffafa;
   color: #54423d;
   line-height: 1.6;
+}
+
+.overflow-hidden {
   overflow-x: hidden;
 }
 
